<resources>
    <string name="app_name">HiSky</string>
    <string name="song_Name">Snow(Hey Oh)</string>
    <string name="song_Artist">Red Hot Chilli Peppers</string>
    <string name="edit">Edit</string>
    <string name="format">Format</string>
    <string name="list_rep">Playlists</string>
    <string name="sound">Sound</string>
    <string name="exit">Log Out</string>
    <string name="theme">Theme</string>
    <string name="enterPassword">Enter the password</string>
    <string name="enterValue">Enter</string>
    <string name="emptyError">The value is required</string>
    <string name="clickTimes">Introduce how many times you wish to tap the musical note</string>
    <string name="backupPassword">Set a backup password</string>
    <string name="Done">Done</string>
    <string name="passTooShort">The password is too short!  It should contain at least 4 characters</string>
    <string name="numberNotAccepted">The number can\'t be 0!</string>
    <string name="registerSuccess">User creater successfully! Enjoy ;)</string>
    <string name="logged">Correctly logged in uwu</string>
    <string name="loginFail">Invalid password :(</string>
    <string name="change">VIEW</string>
    <string name="files">Files</string>
    <string name="images">Images</string>
    <string name="newFile">New File</string>
    <string name="addFile">Add File</string>
    <string name="add">Add</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="settings">SETTINGS</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeMessage">As a first step to your HiSky experience please fill out the following fields.</string>
    <string name="nameFile">Name of File</string>
    <string name="pathFile">Path</string>
    <string name="send">Create</string>
    <string name="clean">Clean</string>
    <string name="deleteButton">Delete file</string>
    <string name="settings_head">Settings</string>
    <string name="app_name_full">HiSky</string>
    <string name="authors">Authors</string>
    <string name="info">Info</string>
    <string name="ver">Version</string>
    <string name="dunno">SpiceGirls</string>
    <string name="support">Support</string>
    <string name="telegram">Telegram</string>
    <string name="wapp">Whats App</string>
    <string name="donate">  Donate</string>
    <string name="donate_subtext">Hey everyone! It took a lot of hard work to turn this project into reality, and I hope you\'re enjoying it! If you like the project and want it to continue, please consider donating. It motivates me to keep working on it.


You can donate via %1$s
or via the UPI address %2$s</string>
    <string name="about_also">If you have any problem don\'t hesitate to CONTACT US. And if you liked this app please help us and DONATE.</string>
    <string name="darkv314">Ricardo Tejerina</string>
    <string name="mik43la">Mikaela Cárdenas</string>
    <string name="laBalaElmo">Juan Rodrigo Tordoya</string>
    <string name="aleS900">Santiago Vargas</string>
    <string name="deseg_gd">Graphics Designer ;)</string>
    <string name="abou_us">About Us</string>

    <string name="size">Size</string>
    <string name="datec">Date created</string>
</resources>
