<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/drawer_header_layout2" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:textAlignment="viewStart"
        android:text="@string/edit"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:text="@string/format"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:text="@string/list_rep"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:text="@string/sound"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:text="@string/theme"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkBlue"
        android:text="@string/exit"
        android:textAlignment="viewStart"
        android:paddingStart="20dp"
        android:textColor="@color/colorGrey"/>

</LinearLayout>