<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/full_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageButton
            android:id="@+id/music_note"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            app:srcCompat="@drawable/ic_player_music_note" />

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:padding="30dp"
            app:srcCompat="@drawable/ic_player_central_lines">

        </ImageView>

        <RelativeLayout
            android:id="@+id/lower_half"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/song_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amiko"
                android:gravity="center_horizontal"
                android:text="@string/song_Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/song_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_name"
                android:fontFamily="@font/amiko"
                android:gravity="center_horizontal"
                android:text="@string/song_Artist"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="12sp"
                android:textStyle="bold">

            </TextView>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/song_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/song_artist"
                android:layout_gravity="center_vertical"
                android:padding="25dp" />

            <LinearLayout
                android:id="@+id/song_buttons"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_player_skip_previous" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    app:srcCompat="@drawable/ic_player_play_arrow">

                </ImageButton>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_player_skip_next" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/reproduction_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/song_buttons"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_player_repeat">

                </ImageButton>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"

                    app:srcCompat="@drawable/ic_player_upward_arrow">

                </ImageButton>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    app:srcCompat="@drawable/ic_player_shuffle">

                </ImageButton>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/popUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_transparent">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:padding="20dp"
            android:background="@drawable/login_popup">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true">

            </EditText>

            <TextView
                android:id="@+id/enterPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordText"
                android:layout_centerInParent="true"
                android:text="@string/enterPassword">

            </TextView>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enterPass"
                android:layout_centerInParent="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/enterValue">

            </Button>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>